Fixed report chart height, overflow and bump version 0.1.48

--- a/src/scss/backend/pages/reports.scss
+++ b/src/scss/backend/pages/reports.scss
@@ -7,7 +7,8 @@
 }
 
 .reports-page .chart-container {
-  height: auto;
+  overflow: auto;
+  height: calc(100% - 60px);
   background-color: #fff;
   border-top: 1px solid #e9e9e9;
   padding: 10px 20px 20px;
